Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 <a id="资源" class="anchor" href="#%E8%B5%84%E6%BA%90" aria-hidden="true"><span class="octicon octicon-link"></span></a>资源</h1>
 
 <ul>
-<li><a href="https://github.com/dubbo">源码:https://github.com/dubbo</a></li>
+<li>源码：<a href="https://github.com/dubbo">https://github.com/dubbo</a>
+</li>
+<li>下载：<a href="http://repo1.maven.org/maven2/com/alibaba/dubbo">http://repo1.maven.org/maven2/com/alibaba/dubbo</a>
+</li>
+<li>微博：<a href="http://weibo.com/dubbo">http://weibo.com/dubbo</a>
+</li>
+<li>QQ群：222162989</li>
 </ul>
 
 <h1>
