--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">DUBBO</h1>
-      <h2 class="project-tagline">Dubbo is a distributed service framework enpowers applications with service import/export capability with high performance RPC.</h2>
+      <h2 class="project-tagline">DUBBO是一个分布式服务框架，致力于提供高性能和透明化的RPC远程服务调用方案，是阿里巴巴SOA服务化治理方案的核心框架，每天为2,000+个服务提供3,000,000,000+次访问量支持，并被广泛应用于阿里巴巴集团的各成员站点。</h2>
     </section>
 
     <section class="main-content">
