--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </li>
 <li>微博：<a href="http://weibo.com/dubbo">http://weibo.com/dubbo</a>
 </li>
-<li>QQ群：222162989</li>
+<li>QQ群：222162989（已满），366736103</li>
 </ul>
 
 <h1>
