--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <section class="page-header">
       <h1 class="project-name">DUBBO</h1>
       <h2 class="project-tagline">DUBBO是一个分布式服务框架，致力于提供高性能和透明化的RPC远程服务调用方案，是阿里巴巴SOA服务化治理方案的核心框架，每天为2,000+个服务提供3,000,000,000+次访问量支持，并被广泛应用于阿里巴巴集团的各成员站点。</h2>
+      <button onclick="window.location.href='http://click.aliyun.com/m/4336/';" style="color:black;background-color:white;">购买云服务器</button>
     </section>
 
     <section class="main-content">
+    
       <h1>
 <a id="资源" class="anchor" href="#%E8%B5%84%E6%BA%90" aria-hidden="true"><span class="octicon octicon-link"></span></a>资源</h1>
 
@@ -40,7 +42,7 @@
 </ul>
 
 <a href="http://click.aliyun.com/m/4337/"><img src="aliyun.jpg" alt="阿里云" /></a>
-<br/><button onclick="window.location.href='http://click.aliyun.com/m/4336/';">购买云服务器</button>
+
       <footer class="site-footer">
 
         <span class="site-footer-credits">Copyright (R) Alibaba Group.</span>
