--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">Copyright (R) Alibaba Group.</span>
+        <span class="site-footer-credits">Copyright (R) Alibaba Group Limited and licensors. All rights reserved.</span>
       </footer>
 
     </section>
