--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>DUBBO by dubbo</title>
+    <title>DUBBO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -45,7 +45,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">Copyright (R) Alibaba Group Limited and licensors. All rights reserved.</span>
+        <span class="site-footer-credits">Dubbo Team.</span>
       </footer>
 
     </section>
