--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <section class="page-header">
       <h1 class="project-name">DUBBO</h1>
       <h2 class="project-tagline">DUBBO是一个分布式服务框架，致力于提供高性能和透明化的RPC远程服务调用方案，是阿里巴巴SOA服务化治理方案的核心框架，每天为2,000+个服务提供3,000,000,000+次访问量支持，并被广泛应用于阿里巴巴集团的各成员站点。</h2>
-      <button onclick="window.location.href='http://click.aliyun.com/m/4336/';" style="color:black;background-color:white;">购买云服务器</button>
     </section>
 
     <section class="main-content">
@@ -41,7 +40,7 @@
 <li><a href="FAQ-zh.htm">常见问题</a></li>
 </ul>
 
-<a href="http://click.aliyun.com/m/4337/"><img src="aliyun.jpg" alt="阿里云" /></a>
+<a href="http://click.aliyun.com/m/7716/"><img src="https://img.alicdn.com/tps/TB15RugOpXXXXXkXVXXXXXXXXXX-434-172.jpg" alt="阿里云" /></a>
 
       <footer class="site-footer">
 
