MISC: 调整首页超链接

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Docs<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="https://dubbo.gitbooks.io/user-s-guide/content/" target="_blank">User's Guide</a></li>
-                    <li><a href="https://dubbo.gitbooks.io/developer-s-guide/content/" target="_blank">Developer's Guide</a></li>
-                    <li><a href="https://dubbo.gitbooks.io/admin-s-guide/content/" target="_blank">Admin's Guide</a></li>
+                    <li><a href="user-guide/" target="_blank">User's Guide</a></li>
+                    <li><a href="developer-guide/" target="_blank">Developer's Guide</a></li>
+                    <li><a href="admin-guide/" target="_blank">Admin's Guide</a></li>
                   </ul>
                 </li>
                 <li><a href="#about">Releases</a></li>
@@ -139,7 +139,7 @@
           <h2 class="blog-post-title"><a name="quickstart">Quick Start</a></h2>
           <p>This guide gets you started with dubbo with a simple working demo.</p>
           <h4>Download the sources(demo)</h4>
-          <p>You’ll need a local copy of the example code to work through this quickstart. Download the demo code from our <a href="https://github.com/alibaba/dubbo" target="_blank">Github repository</a> (the following command clones the entire repository, but you just need the dubbo-demo for this quickstart and other tutorials):
+          <p>You’ll need a local copy of the example code to work through this quickstart. Download the demo code from our <a href="https://github.com/alibaba/dubbo/tree/master/dubbo-demo/" target="_blank">Github repository</a> (the following command clones the entire repository, but you just need the dubbo-demo for this quickstart and other tutorials):
           </p>
           <div>
             <pre>
@@ -205,8 +205,8 @@
             下面，让我们从代码层面看一下Quick Start示例工程是如何实现的。<br/>
             开始前请注意：
           <ul class="list-group-item-heading">
-            <li>使用的是Dubbo推荐的<a href="https://dubbo.gitbooks.io/user-s-guide/content/configuration/xml.html" target="_blank">Spring配置方式</a>。要使用API配置请参考<a href="https://dubbo.gitbooks.io/user-s-guide/content/configuration/api.html">API配置</a></li>
-            <li>使用广播模式实现的服务自动注册与发现，生产环境中，一般要部署单独的<a href="https://dubbo.gitbooks.io/user-s-guide/content/reference-registry/introduction.html" target="_blank">注册中心</a></li>
+            <li>使用的是Dubbo推荐的<a href="user-guide/configuration/xml.html" target="_blank">Spring配置方式</a>。要使用API配置请参考<a href="user-guide/configuration/api.html">API配置</a></li>
+            <li>使用广播模式实现的服务自动注册与发现，生产环境中，一般要部署单独的<a href="user-guide/reference-registry/introduction.html" target="_blank">注册中心</a></li>
           </ul>
 
           </p>
@@ -328,9 +328,9 @@ public class Consumer {
           </div>
           <div class="panel-body">
             <ol class="list-unstyled">
-              <li><a href="https://dubbo.gitbooks.io/user-s-guide/content/" target="_blank">User's Guide</a></li>
-              <li><a href="https://dubbo.gitbooks.io/developer-s-guide/content/" target="_blank">Developer's Guide</a></li>
-              <li><a href="https://dubbo.gitbooks.io/admin-s-guide/content/" target="_blank">Admin's Guide</a></li>
+              <li><a href="user-guide/" target="_blank">User's Guide</a></li>
+              <li><a href="developer-guide/" target="_blank">Developer's Guide</a></li>
+              <li><a href="admin-guide/" target="_blank">Admin's Guide</a></li>
             </ol>
           </div>
         </div>
