MISC: 调整首页样式

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <h1>Dubbo &nbsp;&nbsp;&nbsp;<a href="https://github.com/alibaba/dubbo"><i class="small fa fa-github"></i></a></h1>
         <p>一个分布式、高性能、透明化的RPC服务框架，提供服务自动注册、自动发现等高效服务治理方案.</p>
         <p style="margin">
-            <a class="btn btn-info btn-lg" href="https://github.com/alibaba/dubbo#quick-start"  role="button">Quick Start &raquo;</a>
-            <a class="btn btn-info btn-lg" style="margin-left:30px;" href="#tutorial" role="button">Tutorials &raquo;</a>
+            <a class="btn btn-info btn-lg" href="https://github.com/alibaba/dubbo#quick-start"  role="button">快速启动 &raquo;</a>
+            <a class="btn btn-info btn-lg" style="margin-left:30px;" href="#tutorial" role="button">示例DEMO &raquo;</a>
         </p>
       </div>
     </div>
@@ -88,7 +88,7 @@
 
         <div class="blog-post">
 
-          <h2 class="blog-post-title">Overview</h2>
+          <h2 class="blog-post-title">概览</h2>
           <p>Dubbo是阿里巴巴SOA服务化治理方案的核心框架，每天为2,000+个服务提供3,000,000,000+次访问量支持，并被广泛应用于阿里巴巴集团的各成员站点：
           </p>
           <div style="margin:10px 0 10px 0;">
@@ -124,7 +124,7 @@
           <hr>
 
           <!-- ********Build this demo step by step****** -->
-          <h2><a name="tutorial">Tutorials</a></h2>
+          <h2><a name="tutorial">示例DEMO</a></h2>
 
           <p>
               通过一个简单的demo从代码层面介绍了如何使用dubbo开发一个远程通信服务。快速启动&源码下载，参见<a href="https://github.com/alibaba/dubbo">Github</a>。<br/>
@@ -260,20 +260,20 @@ public class Consumer {
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Notice</h3>
+            <h3 class="panel-title">公告</h3>
           </div>
           <div class="panel-body">
 
-              &nbsp;&nbsp;&nbsp;&nbsp;dubbo项目将正式得到官方维护与支持，我们期待这款优秀的开源项目在未来持续保持活力，引领开源服务框架
+              &nbsp;&nbsp;&nbsp;&nbsp;Dubbo项目将正式得到官方维护与支持，我们期待这款优秀的开源项目在未来持续保持活力，引领开源服务框架
               <br/><br/>
-              <span style="margin-left:90px;">--Alibaba dubbo-team</span>
+              <span style="margin-left:100px;">Alibaba Dubbo team</span>
           </div>
         </div>
 
 
           <div class="panel panel-default">
               <div class="panel-heading">
-                  <h3 class="panel-title">Documentation</h3>
+                  <h3 class="panel-title">文档</h3>
               </div>
               <div class="panel-body">
                   <ol class="list-unstyled" style="margin-left:5px;">
@@ -286,7 +286,7 @@ public class Consumer {
 
           <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Releases</h3>
+            <h3 class="panel-title">版本发布</h3>
           </div>
           <div class="panel-body">
             Release信息将会在这里发布。
@@ -294,7 +294,7 @@ public class Consumer {
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Others</h3>
+            <h3 class="panel-title">其他</h3>
           </div>
           <div class="panel-body">
 
@@ -307,7 +307,7 @@ public class Consumer {
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Alibaba dubbo-team</p>
+        <p>&copy; 2017 Alibaba Dubbo team</p>
       </footer>
 
     </div><!-- /.container -->
