MISC: 调整首页样式

--- a/index.html
+++ b/index.html
@@ -264,9 +264,11 @@ public class Consumer {
           </div>
           <div class="panel-body">
 
-              &nbsp;&nbsp;&nbsp;&nbsp;Dubbo项目将正式得到官方维护与支持，我们期待这款优秀的开源项目在未来持续保持活力，引领开源服务框架
-              <br/><br/>
-              <span style="margin-left:100px;">Alibaba Dubbo team</span>
+              &nbsp;&nbsp;&nbsp;&nbsp;Dubbo开源项目将得到官方重点维护，我们期待这个优秀的开源项目在未来持续保持活力，引领开源服务框架
+              <br/>
+              <span style="margin-left:100px;">Alibaba Dubbo Team</span>
+              <br/>
+              <span style="margin-left:160px;">2017.07.31</span>
           </div>
         </div>
 
@@ -307,7 +309,7 @@ public class Consumer {
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Alibaba Dubbo team</p>
+        <p>&copy; 2017 Alibaba Dubbo Team</p>
       </footer>
 
     </div><!-- /.container -->
