MISC: 增加统计代码

--- a/index.html
+++ b/index.html
@@ -325,5 +325,15 @@ public class Consumer {
     <script src="./sources/bootstrap/assets/js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./sources/bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?5d37fba14b64e6bc8e0be39b4a08a59d";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
   </body>
 </html>
