MISC: 增加faq community两个页面

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                   </ul>
                 </li>
                 <li><a href="#">Releases</a></li>
-                <li><a href="https://gitter.im/alibaba/dubbo?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge">Community</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="./community.html">Community</a></li>
+                <li><a href="./faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
@@ -276,9 +276,9 @@ public class Consumer {
 
               &nbsp;&nbsp;&nbsp;&nbsp;Dubbo开源项目将得到官方重点维护，我们期待这个优秀的开源项目在未来持续保持活力，引领开源服务框架
               <br/>
-              <span style="margin-left:100px;">Alibaba Dubbo Team</span>
+              <span style="float:right;">Alibaba Dubbo Team</span>
               <br/>
-              <span style="margin-left:160px;">2017.07.31</span>
+              <span style="float:right;">2017.07.31</span>
           </div>
         </div>
 
