MISC: 增加faq community两个页面

--- a/community.html
+++ b/community.html
@@ -93,9 +93,9 @@
                     欢迎在<a href="https://github.com/alibaba/dubbo/issues">Github issues</a>报告您遇到的问题。<br/>
                     请在<em>报告问题</em>前：
                     <ul class="list-group-item-heading">
-                        <li>先阅读一下<a href="./faq.html">见问题解答</a>常中的建议</li>
+                        <li>先阅读一下<a href="./faq.html">常见问题解答</a>中的建议</li>
                         <li>在<a href="https://github.com/alibaba/dubbo/issues">Github issues</a>中搜索是否有相同问题已提交</li>
-                        <li>如果是对使用方法不了解，欢迎先在<a href="https://gitter.im/alibaba/dubbo?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge">gitter</a>或<a href="http://groups.google.com/group/dubbo">论坛</a>实时交流提问</li>
+                        <li>如果是对使用方法不了解，可以先在<a href="https://gitter.im/alibaba/dubbo?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge">gitter</a>或<a href="http://groups.google.com/group/dubbo">论坛</a>实时交流提问</li>
                     </ul>
                 </p>
                 <hr/>
@@ -114,7 +114,7 @@
                 <p>有任何问题或疑问？想随时了解Dubbo项目的动态？请加入<a href="http://groups.google.com/group/dubbo">Mailing list</a></p>
                 <hr>
 
-                <h4>已知用户</h4>
+                <h4><a name="known_user">已知用户</a></h4>
                 <div style="margin-top:25px;" class="row">
                     <div class="col-sm-6 col-md-3">
                             <img src="sources/images/user_alibaba.jpg"
