--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <img src="./sources/images/laiwang.png" class="img-rounded"  style="margin:5px 5px 5px 0;">
             <img src="./sources/images/lp.png" class="img-rounded"  style="margin:5px 5px 5px 0;">
           </div>
-            <p>自开源后，已有不少非阿里系公司在使用Dubbo，参见：<a href="#"></a>已知用户</p>
+            <p>自开源后，已有不少非阿里系公司在使用Dubbo，参见：<a href="./community.html#known_user"></a>已知用户</p>
             <br/>
             <h4>那么，Dubbo是什么？</h4>
 
