MISC: 调整首页样式

--- a/index.html
+++ b/index.html
@@ -276,9 +276,11 @@ public class Consumer {
 
               &nbsp;&nbsp;&nbsp;&nbsp;Dubbo开源项目将得到官方重点维护，我们期待这个优秀的开源项目在未来持续保持活力，引领开源服务框架
               <br/>
-              <span style="float:right;">Alibaba Dubbo Team</span>
+              <div style="float:right;">
+              <span>Alibaba Dubbo Team</span>
               <br/>
               <span style="float:right;">2017.07.31</span>
+              </div>
           </div>
         </div>
 
