--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ public class Consumer {
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2017 Alibaba Dubbo Team</p>
+        <br/><a href="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner_click"><img alt="阿里云" src="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner" /></a>
       </footer>
 
     </div><!-- /.container -->
