--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Dubbo Project</a>
+              <a class="navbar-brand" href="#" onclick="return false;">DUBBO</a>
             </div>
             <div id="navbar" style="float:right;" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -314,6 +314,7 @@ public class Consumer {
 
           </div>
         </div>
+        <br/><a href="https://render.alipay.com/p/s/taobaonpm_click/dubbo_community_zh_alibaba_logo_click"><img alt="aliyun" src="https://render.alipay.com/p/s/taobaonpm_click/dubbo_community_zh_alibaba_logo" /></a>
       </div><!-- /.blog-sidebar -->
 
     </div><!-- /.row -->
@@ -321,8 +322,8 @@ public class Consumer {
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Alibaba Dubbo Team</p>
-        <br/><a href="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner_click"><img alt="阿里云" src="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner" /></a>
+        <p>&copy; 2017 <a href="http://www.alibabagroup.com">Alibaba</a> Dubbo Team</p>
+        <br/><a href="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner_click"><img alt="aliyun" src="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner" /></a>
       </footer>
 
     </div><!-- /.container -->
