add community&faq pages

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     <link href="./sources/awesome/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://use.fontawesome.com/4c7d1ecd7a.js"></script>
+
+      <script>
+          var _hmt = _hmt || [];
+          (function() {
+              var hm = document.createElement("script");
+              hm.src = "https://hm.baidu.com/hm.js?5d37fba14b64e6bc8e0be39b4a08a59d";
+              var s = document.getElementsByTagName("script")[0];
+              s.parentNode.insertBefore(hm, s);
+          })();
+      </script>
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -45,7 +55,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Dubbo Project</a>
+              <a class="navbar-brand" href="#" onclick="return false;">DUBBO</a>
             </div>
             <div id="navbar" style="float:right;" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -58,8 +68,8 @@
                   </ul>
                 </li>
                 <li><a href="#">Releases</a></li>
-                <li><a href="https://gitter.im/alibaba/dubbo?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge">Community</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="./community.html">Community</a></li>
+                <li><a href="./faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
@@ -72,10 +82,10 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Dubbo &nbsp;&nbsp;&nbsp;<a href="https://github.com/alibaba/dubbo"><i class="small fa fa-github"></i></a></h1>
-        <p>一款分布式、高性能、透明化的RPC服务框架，提供服务自动注册、自动发现等高效服务治理方案.</p>
+        <p>一个分布式、高性能、透明化的RPC服务框架，提供服务自动注册、自动发现等高效服务治理方案.</p>
         <p style="margin">
-            <a class="btn btn-info btn-lg" href="https://github.com/alibaba/dubbo#quick-start"  role="button">Quick Start &raquo;</a>
-            <a class="btn btn-info btn-lg" style="margin-left:30px;" href="#tutorial" role="button">Tutorials &raquo;</a>
+            <a class="btn btn-info btn-lg" href="https://github.com/alibaba/dubbo#quick-start"  role="button">快速启动 &raquo;</a>
+            <a class="btn btn-info btn-lg" style="margin-left:30px;" href="#tutorial" role="button">示例DEMO &raquo;</a>
         </p>
       </div>
     </div>
@@ -88,7 +98,7 @@
 
         <div class="blog-post">
 
-          <h2 class="blog-post-title">Overview</h2>
+          <h2 class="blog-post-title">概览</h2>
           <p>Dubbo是阿里巴巴SOA服务化治理方案的核心框架，每天为2,000+个服务提供3,000,000,000+次访问量支持，并被广泛应用于阿里巴巴集团的各成员站点：
           </p>
           <div style="margin:10px 0 10px 0;">
@@ -101,7 +111,7 @@
             <img src="./sources/images/laiwang.png" class="img-rounded"  style="margin:5px 5px 5px 0;">
             <img src="./sources/images/lp.png" class="img-rounded"  style="margin:5px 5px 5px 0;">
           </div>
-            <p>自开源后，已有不少非阿里系公司在使用Dubbo，参见：<a href="#"></a>已知用户</p>
+            <p>自开源后，已有不少非阿里系公司在使用Dubbo，参见<a href="./community.html#known_user">已知用户</a></p>
             <br/>
             <h4>那么，Dubbo是什么？</h4>
 
@@ -124,7 +134,7 @@
           <hr>
 
           <!-- ********Build this demo step by step****** -->
-          <h2><a name="tutorial">Tutorials</a></h2>
+          <h2><a name="tutorial">示例DEMO</a></h2>
 
           <p>
               通过一个简单的demo从代码层面介绍了如何使用dubbo开发一个远程通信服务。快速启动&源码下载，参见<a href="https://github.com/alibaba/dubbo">Github</a>。<br/>
@@ -260,20 +270,24 @@ public class Consumer {
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Notice</h3>
+            <h3 class="panel-title">公告</h3>
           </div>
           <div class="panel-body">
 
-              &nbsp;&nbsp;&nbsp;&nbsp;dubbo项目将正式得到官方维护与支持，我们期待这款优秀的开源项目在未来持续保持活力，引领开源服务框架
-              <br/><br/>
-              <span style="margin-left:90px;">--Alibaba dubbo-team</span>
+              &nbsp;&nbsp;&nbsp;&nbsp;Dubbo开源项目将得到官方重点维护，我们期待这个优秀的开源项目在未来持续保持活力，引领开源服务框架
+              <br/>
+              <div style="float:right;">
+              <span>Alibaba Dubbo Team</span>
+              <br/>
+              <span style="float:right;">2017.07.31</span>
+              </div>
           </div>
         </div>
 
 
           <div class="panel panel-default">
               <div class="panel-heading">
-                  <h3 class="panel-title">Documentation</h3>
+                  <h3 class="panel-title">文档</h3>
               </div>
               <div class="panel-body">
                   <ol class="list-unstyled" style="margin-left:5px;">
@@ -286,7 +300,7 @@ public class Consumer {
 
           <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Releases</h3>
+            <h3 class="panel-title">版本发布</h3>
           </div>
           <div class="panel-body">
             Release信息将会在这里发布。
@@ -294,12 +308,13 @@ public class Consumer {
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Others</h3>
+            <h3 class="panel-title">其他</h3>
           </div>
           <div class="panel-body">
 
           </div>
         </div>
+        <br/><a href="https://render.alipay.com/p/s/taobaonpm_click/dubbo_community_zh_alibaba_logo_click"><img alt="aliyun" src="https://render.alipay.com/p/s/taobaonpm_click/dubbo_community_zh_alibaba_logo" /></a>
       </div><!-- /.blog-sidebar -->
 
     </div><!-- /.row -->
@@ -307,7 +322,8 @@ public class Consumer {
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Alibaba dubbo-team</p>
+        <p>&copy; 2017 <a href="http://www.alibabagroup.com">Alibaba</a> Dubbo Team</p>
+        <br/><a href="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner_click"><img alt="aliyun" src="https://render.alipay.com/p/s/taobaonpm_click/dubbo_banner" /></a>
       </footer>
 
     </div><!-- /.container -->
@@ -323,5 +339,7 @@ public class Consumer {
     <script src="./sources/bootstrap/assets/js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./sources/bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+
+
   </body>
 </html>
