add codestyle link

--- a/community.html
+++ b/community.html
@@ -102,7 +102,7 @@
 
                 <h4>贡献代码</h4>
                 <p>
-                    欢迎贡献Pull requests
+                    欢迎贡献Pull requests，请遵循以下<a href="./download/dubbo_codestyle_for_idea.xml">code style规范</a>
                 </p>
                 <hr>
 
