fix jump to index.html bug

--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Dubbo</a>
+                    <a class="navbar-brand" href="index.html" >Dubbo</a>
                 </div>
                 <div id="navbar" style="float:right;" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
