--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Dubbo</a>
+                    <a class="navbar-brand" href="index.html" >Dubbo</a>
                 </div>
                 <div id="navbar" style="float:right;" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -102,7 +102,7 @@
 
                 <h4>贡献代码</h4>
                 <p>
-                    欢迎贡献Pull requests，请遵循以下<a href="./download/dubbo_codestyle_for_idea.xml">code style规范</a>
+                    欢迎贡献Pull requests，请遵循指定<a href="https://github.com/alibaba/dubbo/tree/master/codestyle">code style规范</a>
                 </p>
                 <hr>
 
