--- a/books/dubbo-user-book/references/qos.html
+++ b/books/dubbo-user-book/references/qos.html
@@ -1502,7 +1502,7 @@ OK
 dubbo&gt;offline
 OK
 
-//&#x6839;&#x636E;&#x6B63;&#x5219;&#xFF0C;&#x4E0A;&#x7EBF;&#x90E8;&#x5206;&#x670D;&#x52A1;
+//&#x6839;&#x636E;&#x6B63;&#x5219;&#xFF0C;&#x4E0B;&#x7EBF;&#x90E8;&#x5206;&#x670D;&#x52A1;
 dubbo&gt;offline com.*
 OK
 </code></pre><h3 id="help-&#x547D;&#x4EE4;">help &#x547D;&#x4EE4;</h3>
