--- a/documentations/3.0/en-us/site/index.html
+++ b/documentations/3.0/en-us/site/index.html
@@ -669,7 +669,24 @@
             <div class="section">
               
                 <h1 id="dubbo-overview">Dubbo Overview</h1>
-<p>Dubbo 3.0 </p>
+<p>The core mission of Dubbo 3.0 is to embrace Cloud Native, makes Dubbo easy to use in building Cloud Native services.
+Dubbo 3.0 will provide the following features:</p>
+<ul>
+<li>Optimized Service Discovery Model<ul>
+<li>Being able to support larger-scale cluster with millions of instances</li>
+<li>Interact with other Microservices stacks, e.g., SpringCloud, ...</li>
+</ul>
+</li>
+<li>The next generation RPC protocol based on HTTP/2<ul>
+<li>Reactive Stream</li>
+<li>Backpressure</li>
+<li>HTTP/2</li>
+</ul>
+</li>
+<li>Routing Rule</li>
+<li>Support Kubernetes Native Service</li>
+<li>Work seamlessly with Service Mesh architecture</li>
+</ul>
 <h2 id="basic-architecture">Basic Architecture</h2>
 <p><img alt="arch" src="user/sources/images/arch.png" /></p>
 <h2 id="features">Features</h2>
@@ -722,5 +739,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-08-06 12:28:11
+Build Date UTC : 2020-08-06 12:47:26
 -->
