fix user img path

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -398,22 +398,22 @@ This file was automatically generated - do not edit
 <div class="top-hr hr-logos">
   <div class="logos">
     <a href="https://www.alibaba.com" target="_blank">
-      <img src="/img/users_alibaba.png" alt="">
+      <img src="./img/users_alibaba.png" alt="">
     </a>
     <a href="https://www.alibaba.com" target="_blank">
-      <img src="/img/users_alibaba.png" alt="">
+      <img src="./img/users_alibaba.png" alt="">
     </a>
     <a href="https://www.alibaba.com" target="_blank">
-      <img src="/img/users_alibaba.png" alt="">
+      <img src="./img/users_alibaba.png" alt="">
     </a>
     <a href="https://www.alibaba.com" target="_blank">
-      <img src="/img/users_alibaba.png" alt="">
+      <img src="./img/users_alibaba.png" alt="">
     </a>
     <a href="https://www.alibaba.com" target="_blank">
-      <img src="/img/users_alibaba.png" alt="">
+      <img src="./img/users_alibaba.png" alt="">
     </a>
     <a href="https://www.alibaba.com" target="_blank">
-      <img src="/img/users_alibaba.png" alt="">
+      <img src="./img/users_alibaba.png" alt="">
     </a>
   </div>
 </div>
