customize 404 and home background

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -19,7 +19,8 @@ This file was automatically generated - do not edit
 
   .tx-container {
     padding-top: 1rem;
-    background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)
+    /*background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)*/
+    background: linear-gradient(to bottom, var(--md-primary-fg-color), hsla(280deg, 67%, 55%, 1) 99%, #fff 99%)
   }
 
   .tx-hero {
