--- a/overrides/404.html
+++ b/overrides/404.html
@@ -6,7 +6,7 @@
 <!-- 添加Apache校验项开始 -->
 <!-- 只加a标签和img标签，不要有其余的标签出现，同时设置style="display: none" -->
 <a style="display: none" href="http://www.apache.org/events/current-event">Apache Dubbo is an effort undergoing incubation at The Apache Software Foundation (ASF), sponsored by the Incubator. Incubation is required of all newly accepted projects until a further review indicates that the infrastructure, communications, and decision making process have stabilized in a manner consistent with other successful ASF projects. While incubation status is not necessarily a reflection of the completeness or stability of the code, it does indicate that the project has yet to be fully endorsed by the ASF.</a>
-<img style="display: none" src="http://dubbo.apache.org/img/apache_logo.png"/>
+<img style="display: none" src="http://dubbo.apache.org/en-us/img/apache_logo.png"/>
 <ul style="display: none">
   <p class="header">ASF</p>
   <li><a href="http://www.apache.org">Foundation</a></li>
