--- a/documentations/3.0/en-us/site/index.html
+++ b/documentations/3.0/en-us/site/index.html
@@ -733,7 +733,7 @@ Dubbo 3.0 will provide the following features:</p>
     <script>var base_url = '.';</script>
     <script src="js/theme.js" defer></script>
       <script src="search/main.js" defer></script>
-
+	<p><b>"Thanks For Staying Updated With Us!"</b></p>
 </body>
 </html>
 
