--- a/overrides/home_zh.html
+++ b/overrides/home_zh.html
@@ -314,8 +314,101 @@ This file was automatically generated - do not edit
     color-adjust: exact;
   }
 
+  .md-tabs_csr {
+    cursor: pointer;
+    position: relative;
+    height: 4.5rem;
+  }
+
+  .md-sub-tabs_bn {
+    display: none;
+    position: absolute;
+    top: 1.8rem;
+    left: 1rem;
+  }
+
+  .md-tabs_csr:hover .md-sub-tabs_bn {
+    display: block;
+  }
+
+  .md-sub-tabs_link {
+    display: block;
+    margin-top: .5rem;
+    font-size: .7rem;
+    opacity: .7;
+    transition: transform 400ms cubic-bezier(0.1, 0.7, 0.1, 1), opacity 250ms;
+  }
+
+  .md-sub-tabs_link:hover {
+    color: inherit;
+    opacity: 1;
+  }
+
+  .feature-item {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    box-sizing: border-box;
+    padding: 15px;
+    word-break: break-all
+  }
+
+  .bottom-hr {
+    margin-top: 30px;
+    width: 100%;
+    display: flex;
+    max-width: 61rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0 .2rem;
+  }
+
+  .feature-item {
+    flex: 1;
+    min-width: 0;
+    display: flex;
+  }
+
+  .text-center {
+    text-align: center;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: 'Lato', sans-serif;
+    font-size: 23px;
+    font-weight: 300;
+    padding-bottom: 10px;
+    margin-top: 15px;
+  }
+
+  .feature-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+  }
+
+  .feature-title {
+    display: block;
+    font-size: 1.5em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+  }
+
+  .feature-detail {
+    color: #999;
+    font-size: 13px;
+  }
+
+  .mt35 {
+    margin-top: 35px;
+  }
+
   /* 页脚部分样式结束 */
 </style>
+<style />
 <section class="tx-container">
   <div class="md-grid md-typeset">
     <div class="tx-hero">
@@ -331,72 +424,68 @@ This file was automatically generated - do not edit
       </div>
     </div>
   </div>
-
-
 </section>
-<div class="top-hr">
-  <div class="feature-item">
-    <h2>
-      <img src="./img/feature_loadbalances.png" alt=""/>基于 HTTP/2 高性能通信协议
-    </h2>
-    <p>Dubbo3 协议基于 HTTP/2 构建，全面兼容 gRPC，对 Service Mesh、移动端设备更通、用更友好</p>
-  </div>
-  <div class="feature-item">
-    <h2>
-      <img src="./img/feature_loadbalances.png" alt=""/>RPC 粒度的透明服务发现能力
-    </h2>
-    <p>地址与 RPC 元数据解耦，实现业界唯一的 RPC 粒度服务自动发现，同时最小化地址推送资源占用，轻松共建百万实例微服务集群</p>
-  </div>
-  <div class="feature-item">
-    <h2>
-      <img src="./img/feature_loadbalances.png" alt=""/>全面重构的流量管控策略
-    </h2>
-    <p>提供基于标签匹配的全新路由规则，摆脱内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能。</p>
-  </div>
-</div>
-<div class="bottom-hr">
-  <div class="feature-item">
-    <h2><img src="./img/feature_loadbalances.png" alt=""/>面向接口，极致易用</h2>
-    <p>面向接口的编程模型，面向接口的服务治理能力</p>
-  </div>
-  <div class="feature-item">
-    <h2><img src="./img/feature_loadbalances.png" alt=""/>柔性</h2>
-    <p>柔性</p>
-  </div>
-  <div class="feature-item">
-    <h2><img src="./img/feature_loadbalances.png" alt=""/>全面拥抱云原生</h2>
-    <p>服务发现下沉，支持 Kubernetes Native Service；通过对接原生 xDS 数据通信接口，提供云原生 ServiceMesh 平滑迁移方案</p>
-  </div>
-</div>
-<div class="top-hr">
-  <div class="hr">
-  </div>
-</div>
 
-<div class="text-center">Dubbo 案例</div>
-<div class="top-hr hr-logos">
-  <div class="logos">
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_alibaba.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_alibaba.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_alibaba.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_alibaba.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_alibaba.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_alibaba.png" alt="">
-    </a>
+<div class="text-center mt35">特性一览</div>
+<div class=top-hr>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
+    <div class="feature-right">
+      <div class="feature-title">基于 HTTP/2 高性能通信协议</div>
+      <div class="feature-detail">Dubbo3 协议基于 HTTP/2 构建，全面兼容 gRPC，对 Service Mesh、移动端设备更通、用更友好</div>
+    </div>
+  </div>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
+    <div class="feature-right">
+      <div class="feature-title">RPC 粒度的透明服务发现能力</div>
+      <div class="feature-detail">地址与 RPC 元数据解耦，实现业界唯一的 RPC 粒度服务自动发现，同时最小化地址推送资源占用，轻松共建百万实例微服务集群</div>
+    </div>
+  </div>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
+    <div class="feature-right">
+      <div class="feature-title">全面重构的流量管控策略</div>
+      <div class="feature-detail">提供基于标签匹配的全新路由规则，摆脱内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
+    </div>
   </div>
 </div>
-<!-- 合作伙伴结束 -->
+<div class=bottom-hr>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
+    <div class="feature-right">
+      <div class="feature-title">面向接口，极致易用</div>
+      <div class="feature-detail">面向接口的编程模型，面向接口的服务治理能力</div>
+    </div>
+  </div>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
+    <div class="feature-right">
+      <div class="feature-title">柔性</div>
+      <div class="feature-detail">提供基于标签匹配的全新路由规则，摆脱内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
+    </div>
+  </div>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
+    <div class="feature-right">
+      <div class="feature-title">全面拥抱云原生</div>
+      <div class="feature-detail">服务发现下沉，支持 Kubernetes Native Service；通过对接原生 xDS 数据通信接口，提供云原生 ServiceMesh 平滑迁移方案
+      </div>
+    </div>
+  </div>
+</div>
+<div class=top-hr>
+  <div class=hr> </div>
+</div>
+<div class=text-center>Dubbo 案例</div>
+<div class="top-hr hr-logos">
+  <div class=logos> <a href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> </div>
+</div> <!-- 合作伙伴结束 -->
 <div class="md-footer-meta md-typeset">
   <div class="md-footer-meta__inner md-grid">
     <div class="md-footer-copyright">
