--- a/overrides/home_en.html
+++ b/overrides/home_en.html
@@ -19,8 +19,9 @@ This file was automatically generated - do not edit
 
   .tx-container {
     padding-top: 1rem;
-    /*background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)*/
-    background: linear-gradient(to bottom, var(--md-primary-fg-color), hsla(280deg, 67%, 55%, 1) 99%, #fff 99%)
+    background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)
+    /*background: linear-gradient(0deg,#04c0c6,#2ba3de 51%,#3f51b5)*/
+    /*background: linear-gradient(to bottom, var(--md-primary-fg-color), hsla(280deg, 67%, 55%, 1) 99%, #fff 99%)*/
   }
 
   .tx-hero {
@@ -426,7 +427,7 @@ This file was automatically generated - do not edit
 
 
 </section>
-<div class="text-center mt35">Features</div>
+<div class="text-center mt35">What's New in Dubbo 3.0</div>
 <div class="top-hr">
   <div class="feature-item">
     <img src="./img/feature_loadbalances.png" alt="" />
