--- a/overrides/home_zh.html
+++ b/overrides/home_zh.html
@@ -426,7 +426,7 @@ This file was automatically generated - do not edit
   </div>
 </section>
 
-<div class="text-center mt35">特性一览</div>
+<div class="text-center mt35">Dubbo 3.0 新特性</div>
 <div class=top-hr>
   <div class=feature-item>
     <img src="./img/feature_loadbalances.png" alt="" />
