--- a/overrides/main.html
+++ b/overrides/main.html
@@ -7,9 +7,9 @@
   {% if font != false %}
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link rel="stylesheet" href="https://fonts.loli.net/css?family={{
-              font.text | replace(' ', '+') + ':300,400,400i,700%7C' +
-              font.code | replace(' ', '+')
+              'Roboto' | replace(' ', '+') + ':300,400,400i,700%7C' +
+              'Roboto Mono' | replace(' ', '+')
             }}&display=fallback">
-  <style>body,input{font-family:"{{ font.text }}",-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"{{ font.code }}",SFMono-Regular,Consolas,Menlo,monospace}</style>
+  <style>body,input{font-family:"{{ Roboto }}",-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"{{ Roboto Mono }}",SFMono-Regular,Consolas,Menlo,monospace}</style>
   {% endif %}
 {% endblock %}
